# PICASSO

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  smoke.yaml  stage1b_baselines.yaml  stage1c_picasso_smoke.yaml  stage2a_small_formal.yaml  stage2bc_comprehensive.yaml  stage3a_larger_training.yaml  stage3a_supervised_physics.yaml  stage3b_incremental.yaml  stage4_cdl.yaml  stage5a_ablation.yaml  stage5b_controlled_ablation.yaml
data/: README.md
docs/: experiment_design.md  final_audit_report.md  final_project_summary.md  literature_summary.md  method_design.md  problem_definition.md  project_plan.md  reproducibility_check.md  stage1a_smoke_baseline.md  stage1b_baselines.md  stage1c_picasso_smoke.md  stage2a_small_formal.md  stage2bc_code_audit.md  stage2bc_results_analysis.md  stage3a_larger_training.md  stage3a_supervised_physics.md  stage3b_physics_analysis.md  stage5a_ablation_design.md  stage5a_ablation_gap_analysis.md  stage5a_ablation_report.md  stage5b_controlled_ablation_report.md
literature/: PHOENIX_survey_V2.xlsx  PICASSO_large_scale_survey_V3.xlsx  PICASSO_scenario_selection.xlsx
outputs/results/: stage2a_small_formal_results.csv  (+34 more)
tests/: test_baselines.py  test_channel_difficulty.py  test_conditioning.py  test_dataset.py  test_metrics.py  test_noisy_dataset.py  test_picasso_losses.py  test_picasso_models.py  test_shapes.py  test_stage2bc.py  test_stage3a.py  test_stage3a_larger.py  test_stage3b_incremental.py  test_stage4_cdl.py  test_stage5a_ablation.py  test_stage5b_controlled_ablation.py
(+33 files in other folders)
